added hw task 3,4 to sem3